[project]
name = "complianceagent"
version = "0.1.0"
description = "Autonomous Regulatory Monitoring and Adaptation Platform"
authors = [{ name = "Jose David Baena" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["compliance", "regulatory", "gdpr", "ccpa", "hipaa", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "redis>=5.0.1",
    "celery>=5.3.6",
    "playwright>=1.41.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "elasticsearch>=8.12.0",
    "boto3>=1.34.0",
    "tenacity>=8.2.3",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "defusedxml>=0.7.1",
]

[project.urls]
Homepage = "https://github.com/josedab/complianceagent"
Documentation = "https://github.com/josedab/complianceagent#readme"
Repository = "https://github.com/josedab/complianceagent.git"
Issues = "https://github.com/josedab/complianceagent/issues"
Changelog = "https://github.com/josedab/complianceagent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.26.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "faker>=22.0.0",
    "aiosqlite>=0.19.0",
    "factory-boy>=3.3.0",
    "respx>=0.20.0",
    "bandit[toml]>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff configuration - comprehensive linting
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "S101",     # assert used (needed in tests)
    "PLR0913",  # too many arguments
    "TRY003",   # long exception messages
    "COM812",   # missing trailing comma (conflicts with formatter)
    "ISC001",   # implicit string concat (conflicts with formatter)
    "PLR2004",  # magic value comparison
    "S104",     # binding to all interfaces
    "S108",     # /tmp usage
    "G004",     # f-string in logging (acceptable style)
    "ARG001",   # unused function argument (common in APIs/handlers)
    "ARG002",   # unused method argument (common in APIs/handlers)
    "PLC0415",  # import not at top-level (intentional for lazy imports in workers)
    "B008",     # function call in default argument (required for FastAPI Depends)
    "PERF401",  # use list comprehension (minor optimization, keeps code readable)
    "TRY401",   # redundant exception in logging.exception (acceptable pattern)
    "TRY300",   # try-except-pass (sometimes intentional)
    "ERA001",   # commented out code (useful for context)
    "RUF012",   # mutable class default (acceptable for Pydantic models)
    "PYI036",   # bad default in stub (not applicable)
    "SIM102",   # collapsible if (keeps logic clear)
    "PLR0912",  # too many branches (complex logic acceptable)
    "PLW2901", # loop variable overwritten (intentional pattern)
    "SLOT000",  # no __slots__ (acceptable for small classes)
    "RUF001",   # ambiguous unicode (false positive for emoji)
    "SLF001",   # private member access (intentional for internal methods)
    "TRY301",   # abstract raise (minor style preference)
    "S112",     # try-except-continue (acceptable when error is handled)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",     # assert allowed in tests
    "ARG",      # unused arguments in fixtures
    "PLR2004",  # magic values in tests
    "S105",     # hardcoded passwords in tests
    "S106",     # hardcoded passwords in tests
]
"alembic/**/*.py" = [
    "INP001",   # implicit namespace package
]
"app/core/config.py" = [
    "S105",     # hardcoded passwords are dev defaults
]
"app/schemas/user.py" = [
    "S105",     # token_type is not a password
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests (require running services)",
]

# MyPy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "elasticsearch.*",
    "boto3.*",
    "botocore.*",
    "playwright.*",
    "bs4.*",
    "lxml.*",
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 70
show_missing = true

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert_used
