[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "complianceagent-sdk"
version = "0.1.0"
description = "Compliance-as-Code SDK for Python - Embed compliance directly in your code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ComplianceAgent Team", email = "team@complianceagent.io" },
]
keywords = [
    "compliance",
    "gdpr",
    "hipaa",
    "pci-dss",
    "soc2",
    "security",
    "audit",
    "privacy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
encryption = [
    "cryptography>=41.0.0",
]
all = [
    "cryptography>=41.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/complianceagent/complianceagent"
Documentation = "https://docs.complianceagent.io/sdk"
Repository = "https://github.com/complianceagent/complianceagent"
Changelog = "https://github.com/complianceagent/complianceagent/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["complianceagent"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=complianceagent --cov-report=term-missing"

[tool.coverage.run]
source = ["complianceagent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
